# ultra700

./: .gitignore  CMakeLists.txt  CMakePresets.json  MT6261A.ld  README.md  build.ps1  dz09.cfg  monitor.ps1
cmake/: toolchain-arm-none-eabi.cmake
src/: TODO.txt  startup_MT6261x.S  systemconfig.h  systypes.h
src/Application/: appconfig.h  appinit.c  appinit.h  audio_note.c  audio_note.h  pcm_player.c  pcm_player.h
src/Application/Drivers/: appdrivers.h  backlight.c  backlight.h  delay.c  delay.h  dflib.c  dflib.h  fs_fat32.c  fs_fat32.h  ft6236.c  ft6236.h  i2c_scanner.c  i2c_scanner.h  ili9341.c  ili9341.h  safe_gpio.c  safe_gpio.h  sd_minimal.c  sd_minimal.h  sdcard.c  sdcard.h  simple_keypad.c  simple_keypad.h  single_led.c  single_led.h  usb_log.c  usb_log.h  usb_print.h  usbdevice_cdc.c  usbdevice_cdc.h
src/Bootloader/: DZ09_boot.c  DZ09_boot.h  sha-1.c  sha-1.h
src/GUI/: bfcfont.h  gdi.c  gdi.h  gdifont.c  gdifont.h  gditypes.h  gdiutils.c  gdiutils.h  gui.c  gui.h  guibutton.c  guibutton.h  guilabel.c  guilabel.h  guilib.h  guiobject.c  guiobject.h  guiwin.c  guiwin.h
src/GUI/Resource/: fontlib.h
src/Lib/: appheader.c  bootheader.c  mtktypes.h
src/Lib/MT6261/: mt6261.h
src/Lib/MT6261/Drivers/: adienvic.h  afe.c  afe.h  afe_old.c  auxadc.c  auxadc.h  che.h  dpram.h  emi.c  emi.h  gpio.c  gpio.h  gpt.c  gpt.h  kp.h  lcdif.c  lcdif.h  msdc.c  msdc.h  nvic.c  nvic.h  pctl.c  pctl.h  pll.c  pll.h  pmu.c  pmu.h  pwm.c  pwm.h  rgu.c  rgu.h  rtc.c  rtc.h  sdcmd.h  sfi.c  sfi.h  spi.c  spi.h  tcmcache.c  tcmcache.h  (+6 more)
src/Lib/USB/: usb9.c  usb9.h
src/System/: DZ09.c  asmutils.s  crc.c  crc.h  debug.c  debug.h  dlist.c  dlist.h  evmngr.c  evmngr.h  exchandlers.s  fscache.c  fscache.h  init.c  init.h  lrtimer.c  lrtimer.h  memory.c  memory.h  pmngr.c  pmngr.h  resource.c  resource.h  ringbuf.c  ringbuf.h  sf.c  sf.h  sw_i2c.h  systemlib.h  tlsf.c  utils.c  utils.h
tools/FlashTool_v5.1420.00  Azeem/: ConsoleMode_v4_0.xsd  Flash_tool.INI  Flash_tool.lnk  ReleaseNote.xls  scat.txt
